--- a/MerlionPortal/MerlionPortal-war/web/oes/viewallpo.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewallpo.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:head>
         <title>View all Purchase Order</title>
     </h:head>
@@ -47,8 +48,10 @@
 
             <br></br>
             <br></br>
-            <p:commandButton action="#{retrieveSavedOrder.createSo()}" value=" Generat Sales Order">
-            </p:commandButton>       
+            <c:if test="#{retrieveSavedOrder.checkOESSales()}">
+                <p:commandButton action="#{retrieveSavedOrder.createSo()}" value=" Generat Sales Order">
+                </p:commandButton> 
+            </c:if>
         </h:form>
     </h:body>
 </html>
