fix clashing of bootstrap on button

--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -85,7 +85,7 @@
                             <img id="loadingImg" src="img/load.gif" class="loader hide" />
                         </div>
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                        <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" update="createuser" styleClass="btn btn-success" icon="ui-icon-check"/>
+                        <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" update="createuser" styleClass="btn" icon="ui-icon-check"/>
                     </p:panel>
                 </div>
             </h:form>
