fix clashing of bootstrap on button

--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -192,8 +192,8 @@
                                     </div>
                                     <div class="modal-footer">
                                         <p:growl id="growl" showDetail="true" sticky="true" />
-                                        <p:commandButton value="Update" update="growl" styleClass="btn btn-success"  actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
-                                        <p:commandButton value="Close" styleClass="btn btn-warning" pt:data-dismiss="modal"></p:commandButton>
+                                        <p:commandButton value="Update" update="growl" styleClass="btn"  actionListener="#{viewCompanyRoles.updateRole}"></p:commandButton>
+                                        <p:commandButton value="Close" styleClass="btn" pt:data-dismiss="modal"></p:commandButton>
                                     </div>
                                 </div>
                             </div>
