--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
@@ -25,13 +25,11 @@
                     <p:column>
                         <p:submenu label="Product Catalog Management">
                             <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
-                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
-                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
+                            <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
                         </p:submenu>
                         <p:submenu label="BOM Management">
                             <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                            <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                         </p:submenu>
                     </p:column>
                 </p:submenu>
@@ -48,7 +46,7 @@
             <p:panel id="panel" header="Add New Product">
                 <p:ajaxStatus style="width:16px;height:16px;">
                     <f:facet name="start">
-                        <h:graphicImage value="/images/spinner.gif" />
+                        <h:graphicImage value="/img/load.gif" />
                     </f:facet>
                     <f:facet name="complete">
                         <h:outputText value="" />
@@ -101,6 +99,7 @@
                                 <f:selectItem itemLabel="Electronics" itemValue="Electronics" />
                                 <f:selectItem itemLabel="Semi-Finished Products" itemValue="Semi-Finished Products" />  
                                 <f:selectItem itemLabel="Raw Materials" itemValue="Raw Materials" />  
+                                <f:selectItem itemLabel="Others" itemValue="Others" />  
                             </h:selectOneMenu>
                             <p:message for="category" />
                         </p:column>
