--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewaproduct.xhtml
@@ -25,13 +25,11 @@
                     <p:column>
                         <p:submenu label="Product Catalog Management">
                             <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
-                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
-                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
+                            <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
                         </p:submenu>
                         <p:submenu label="BOM Management">
                             <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                            <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                         </p:submenu>
                     </p:column>
                 </p:submenu>
