--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewbom.xhtml
@@ -26,13 +26,11 @@
                     <p:column>
                         <p:submenu label="Product Catalog Management">
                             <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
-                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
-                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
+                            <p:menuitem value="View, Edit and Delete" url="viewallproducts.xhtml" />
                         </p:submenu>
                         <p:submenu label="BOM Management">
                             <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                            <p:menuitem value="View, Edit and Delete BOM" url="viewbom.xhtml" />
                         </p:submenu>
                     </p:column>
                 </p:submenu>
@@ -61,11 +59,16 @@
 
 
             <p:growl id="msgs" showDetail="true"/>   
-            <p:dataTable id="components" var="component1" value="#{productComponentViewEditManagedBean.components}" editable="true" style="margin-bottom:20px">
-
+            <p:dataTable id="components" var="component1" sortMode="multiple" value="#{productComponentViewEditManagedBean.components}" editable="true" style="margin-bottom:20px"
+                         widgetVar="components"
+                         emptyMessage="No Component found"
+                         rowKey="#{component.componentId}">
 
                 <f:facet name="header">
-                    View and Edit BOM for a product
+                    <p:outputPanel>
+                        <h:outputText value="Search Component fields:" />
+                        <p:inputText id="globalFilter" onkeyup="PF('components').filter()" />
+                    </p:outputPanel>
                 </f:facet>
                 <!--note: havent handle supplier info for viewing and editing -->
 
@@ -73,18 +76,18 @@
                 <p:ajax event="rowEditCancel" listener="#{productComponentViewEditManagedBean.onRowCancel}" update=":formMain:msgs" />
 
 
-                <p:column headerText="Component ID">
+                <p:column filterBy="#{component1.componentId}" filterMatchMode="exact"  headerText="ID" style="width:105px">
                     <h:outputText value="#{component1.componentId}" />
                 </p:column>
 
-                <p:column headerText="Component Name">
+                <p:column filterBy="#{component1.componentName}" filterMatchMode="contains" headerText="Name" style="width:105px">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.componentName}" /></f:facet>
                         <f:facet name="input"><p:inputText value="#{component1.componentName}" style="width:100%" label="Component Name"/></f:facet>
                     </p:cellEditor>
                 </p:column>
 
-                <p:column headerText="Component Description">
+                <p:column headerText="Description">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.description}" /></f:facet>
                         <f:facet name="input"><p:inputText value="#{component1.description}" style="width:100%" label="Component Description"/></f:facet>
@@ -98,7 +101,7 @@
                     </p:cellEditor>
                 </p:column>
 
-                <p:column headerText="Component Currency">
+                <p:column  headerText="Currency">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.currency}" /></f:facet>
                         <f:facet name="input">
@@ -109,21 +112,21 @@
                     </p:cellEditor>
                 </p:column> 
 
-                <p:column headerText="Component Cost">
+                <p:column headerText="Cost">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.cost}" /></f:facet>
                         <f:facet name="input"><p:inputText value="#{component1.cost}" style="width:100%" label="Component Cost"/></f:facet>
                     </p:cellEditor>
                 </p:column>
 
-                <p:column headerText="Component Lead Time (in weeks)">
+                <p:column headerText="Lead Time (in weeks)">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.leadTime}" /></f:facet>
                         <f:facet name="input"><p:inputText value="#{component1.leadTime}" style="width:100%" label="Component leadTime"/></f:facet>
                     </p:cellEditor>
                 </p:column>
 
-                <p:column headerText="Component Supplier Company ID">
+                <p:column headerText="Supplier Company ID">
                     <p:cellEditor>
                         <f:facet name="output"><h:outputText value="#{component1.supplierCompanyId}" /></f:facet>
                         <f:facet name="input"><p:inputText value="#{component1.supplierCompanyId}" style="width:100%" label="Component supplier Company ID"/></f:facet>
@@ -148,13 +151,22 @@
                     </p:cellEditor>
                 </p:column>
 
+                <p:column style="width:42px">
+                    <p:commandButton action="#{productComponentViewEditManagedBean.deleteComponent(component1)}" update="components" icon="ui-icon-trash" >
+                        <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this component?" icon="ui-icon-alert" />
+                    </p:commandButton> 
+                    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+                        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"  update=":formMain:msgs"/>
+                        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
+                </p:column>
+
+
                 <p:column style="width:32px">
                     <p:rowEditor />
                 </p:column>
 
             </p:dataTable>
-
-
         </h:form>
     </h:body>
 </html>
